Application/kustomization/assets/postgresql-server-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: poc-postgresql-server
spec:
  replicas: 1
  selector:
    matchLabels:
      name: poc-postgresql-server
      app: poc-postgresql-server
  template:
    metadata:
      labels:
        name: poc-postgresql-server
        app: poc-postgresql-server
    spec:
      containers:
        - name: poc-postgresql-server-container
          image: poc-postgresql-server-image
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "250Mi"
