Application/kustomization/assets/minio-server-service.yml
kind: Service
apiVersion: v1
metadata:
  name: poc-minio-server-service
  annotations:
    description: Exposes and load balances the application pods
  labels:
    name: poc-minio-server-service
    app: poc-minio-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    name: poc-minio-server
