Application/kustomization/assets/minio-server-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: poc-minio-server-route
spec:
  to:
    kind: Service
    name: poc-minio-server-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
