Application/kustomization/assets/postgresql-server.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: poc-postgresql-server
spec:
  replicas: 1
  selector:
    matchLabels:
      name: poc-postgresql-server
      app: poc-postgresql-server
  template:
    metadata:
      labels:
        name: poc-postgresql-server
        app: poc-postgresql-server
    spec:
      containers:
        - name: poc-postgresql-serger-container
          image: poc-postgresql-server-image
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "250Mi"
---
kind: Service
apiVersion: v1
metadata:
  name: poc-postgresql-server-service
  annotations:
    description: Exposes and load balances the application pods
  labels:
    name: poc-postgresql-server-service
    app: poc-postgresql-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    name: poc-postgresql-server
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: poc-postgresql-server-route
spec:
  to:
    kind: Service
    name: poc-postgresql-server-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
